Terminando el responsive

--- a/Home Productos/assets/css/responsive/header.css
+++ b/Home Productos/assets/css/responsive/header.css
@@ -27,9 +27,14 @@
 }
 
 @media screen and (max-width: 480px) {
+  header {
+    height: 70px;
+  }
+
   .mobile-menu {
     min-width: 200px;
   }
+  
 }
 
 @media screen and (max-width: 380px) {
